auth and registration

--- a/careweb/templates/client/login.html
+++ b/careweb/templates/client/login.html
@@ -127,5 +127,8 @@ Login
 
   $('#id_password').addClass('form-control');
   $('#id_password').attr('placeholder', 'Password');
+
+  $('.nav-link').removeClass('active')
+  $('#login-nav-link').addClass('active')
 </script>
 {% endblock extra-js %}
