--- a/careweb/templates/base.html
+++ b/careweb/templates/base.html
@@ -82,21 +82,21 @@
 	<!--End ClickToTop-->
 
 	<!--jQuery JS-->
-	<script src="{% static 'js/jquery.min.js' %"></script>
+	<script src="{% static 'js/jquery.min.js' %}"></script>
 	<!--Bootstrap JS-->
-	<script src="{% static 'js/bootstrap.min.js' %"></script>
-	<script src="{% static 'js/popper.js' %"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/popper.js' %}"></script>
 	<!-- Way Point js -->
-	<script src="{% static 'js/waypoints.min.js' %"></script>
-	<script src="{% static 'js/counter.js' %"></script>
+	<script src="{% static 'js/waypoints.min.js' %}"></script>
+	<script src="{% static 'js/counter.js' %}"></script>
 	<!-- Contact js -->
-	<script src="{% static 'js/contact.js' %"></script>
+	<script src="{% static 'js/contact.js' %}"></script>
 	<!-- Owl carosul js -->
-	<script src="{% static 'js/owl.carousel.min.js' %"></script>
+	<script src="{% static 'js/owl.carousel.min.js' %}"></script>
 	<!-- Venobox JS-->
-	<script src="{% static 'js/venobox.min.js' %"></script>
+	<script src="{% static 'js/venobox.min.js' %}"></script>
 	<!--Main-->
-	<script src="{% static 'js/main.js' %"></script>
+	<script src="{% static 'js/main.js' %}"></script>
 
 	{% block extra-js %}
 	{% endblock extra-js %}
