--- a/careweb/templates/client/register.html
+++ b/careweb/templates/client/register.html
@@ -28,13 +28,13 @@ Register
                             <div class="links">
                                 <ul>
                                     <li>
-                                        <a href="index.html">Home</a>
+                                        <a href="">Home</a>
                                     </li>
                                     <li>
                                         <span>/</span>
                                     </li>
                                     <li>
-                                        <a class="active" href="register.html">Register</a>
+                                        <a class="active" href="">Register</a>
                                     </li>
                                 </ul>
                             </div>
@@ -164,7 +164,7 @@ Register
     $('#id_password').addClass('form-control');
     $('#id_password').attr('placeholder', 'Password');
 
-    $('.nav-link').removeClass('active')
-    $('#register-nav-link').addClass('active')
+    $('.nav-link').removeClass('active');
+    $('#register-nav-link').addClass('active');
     </script>
 {% endblock extra-js %}
