fix issue with wrong id for plan template

--- a/careweb/templates/client/plan.html
+++ b/careweb/templates/client/plan.html
@@ -34,7 +34,7 @@ Plan
                                         <span>/</span>
                                     </li>
                                     <li>
-                                        <a class="active" href="{% url 'profile' id=object.id %}">Profile</a>
+                                        <a class="active" href="{% url 'profile' pk=object.id %}">Profile</a>
                                     </li>
                                       <li>
                                         <span>/</span>
